load("@rules_jvm_external//:defs.bzl", "artifact")
load("@contrib_rules_jvm//java:defs.bzl", "JUNIT5_DEPS", "java_binary", "java_library", "java_test_suite")

java_binary(
    name = "main",
    main_class = "kiwi.breen.event.store.vertx.Main",
    runtime_deps = [":lib"],
)

java_library(
    name = "lib",
    srcs = glob(["src/main/java/**/*"]),
    resources = glob(["src/main/resources/**/*"]),
    runtime_deps = [
        artifact("org.slf4j:slf4j-simple"),
    ],
    deps = [
        artifact("org.slf4j:slf4j-api"),
        artifact("io.vertx:vertx-core"),
    ],
)

java_test_suite(
    name = "test",
    size = "small",
    srcs = glob(["src/test/java/**/*"]),
    package_prefixes = [".kiwi."],
    resources = glob(["src/test/resources/**/*"]),
    runner = "junit5",
    runtime_deps = JUNIT5_DEPS,
    deps = [
        ":lib",
        artifact("io.vertx:vertx-core"),
        artifact("io.vertx:vertx-junit5"),
        artifact("org.junit.jupiter:junit-jupiter-api"),
    ],
)
