module()

bazel_dep(name = "rules_java", version = "7.6.3")
bazel_dep(name = "rules_jvm_external", version = "6.1")
bazel_dep(name = "contrib_rules_jvm", version = "0.27.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.h2database:h2:2.2.224",
        # Vertx
        "io.vertx:vertx-core:4.5.8",
        "io.vertx:vertx-jdbc-client:4.5.8",
        "io.vertx:vertx-junit5:4.5.8",
        # JUnit 5
        "org.junit.platform:junit-platform-launcher:1.10.2",
        "org.junit.platform:junit-platform-reporting:1.10.2",
        "org.junit.jupiter:junit-jupiter-api:5.10.2",
        "org.junit.jupiter:junit-jupiter-params:5.10.2",
        "org.junit.jupiter:junit-jupiter-engine:5.10.2",
    ],
    lock_file = "@//:maven_install.json",
)
use_repo(maven, "maven")
